2.13 (2000-00-00)
Application:
- Translations updated: Russian.

Modules
- Distance, Stats and Rougness tools: Copy to clipboard buttons actually work
  (in 2.12 Save button did both actions and Copy did not do anything).
- Stats tool: Angles are exported in degrees as stated, instead of radians.

Other:
- File gwydion-thumbnailer.schemas is no longer distributed with paths from the
  packager's system, it is created on the build system with the correct paths.
- Outdated MSVC makefiles released in 2.12 were corrected.


2.12 (2009-01-04)
Application:
- New translations: Russian.
- Translations updated: Czech.
- Tips of the day were added, accessible in Meta -> Tip of the Day.

Libraries:
- libgwyprocess: Some grain corners had not been counted as described in grain
  boundary length calculation.  This was corrected.
- libgwyprocess: New grain quantities boundary minimum and maximum were added.
- libgwyprocess: GwyMaskingType enum was added.
- libgwyddion: New nacro gwy_clear() zeroes memory in a sizeof-safe way.
- libgwyddion: New function gwy_memmem() that wraps or emulates GNU memmem().
- libgwydgets: GwyColorAxis uses two-line labels if number and units do not fit
  on one line together.
- ligwyprocess: DataField methods such as gwy_data_field_set_val() check the
  type of the data field argument.
- libgwyapp: gwy_get_foo() binary data functions were changed into a form that
  hopefully works with strict aliasing rules.

Modules:
- Pygwy: Is enabled by default (on Unix).
- Polynomial level: Possible crash when no mask is present was fixed (bug
  introduced in 2.11).
- Calibrate: No longer mangles units of the original data, Reset button works
  again, some user interface corrections.
- Pixmap export: Inset scale bar position and length can be adjusted.
- Facet level: If a mask is present, offers a choice to exclude/include data
  under mask.
- Lines layer: `Random' line number sizes in pixmap export were fixed.